Added projects and changed color theme

--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -2,11 +2,10 @@
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: cabin.png
+img: IBR1.jpg
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
-
+project-date: Jan 2017 - May 2017
+client: IBR Ventures - <a href="https://en.wikipedia.org/wiki/Flo_Rida">Flo Rida</a>
+position: Product/Project Manager
+description: The aim of this project was to calculate an Influencer-Based Return rate, which would quantify the value add of an influencer or celebrity to a campaign or company. My team and I used clustering techniques and social network analysis (using <a href="https://gephi.org/">Gephi</a>) to identify which followers are of most value. We also developed a web based persona-generation app called <a href="personify-ibr.herokuapp.com">Personify</a> that can build a persona for a group of users based on their tweets.
 ---
