--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -2,11 +2,12 @@
 layout: default
 modal-id: 2
 date: 2014-07-17
-img: cake.png
+img: nlp.jpg
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!
-
+project-date: Jan 2017 - May 2017
+client: Carnegie Mellon University
+position: Team Member
+description: My team and I used NLP techniques and search engine models to creat a smart AI bot. This bot can be fed multiple files - wiki entries, newspaper articles, school text - and it can generate questions based on the text. It also answers any questions asked to it about the data that has been fed to it.
+  Our bot achieved an accuracy of 80% in answering questions. You can find the code <a href="https://github.com/hexiaoyuhaha/Wiki-Question-Answering-System">here</a> and a short video of our methodology <a href="https://www.youtube.com/watch?v=VWdR6ornHoc">here</a> 
+  This has applications in education - in the form of automated test generation, customer service - by answering frequently asked questions customers may have, and much more.
 ---
